syntax = "proto3";

package echo;

service EchoService {
  rpc EchoBack (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
